# ai_chatbots

./: .gitignore
RAG/groq/: langchain_groq_rag.py  langchain_groq_rag_local_files.py
RAG/groq/texts/: gpt4all-3d75e5e1-b688-4d5f-b909-16c813fe7cf9.chat  gpt4all-af19604b-987f-44a2-8e60-e77d08c22971.chat  gpt4all-c115d426-d5b0-4c4c-8ad3-ba0130c327a6.chat  how_to_do_great_work.txt  localdocs_v1.db
RAG/groq/vectors/: paulgraham.com_greatwork.pkl  saved_vectors.pkl
RAG/langchain-local_or_api_llm-chainlit-rag-memory/: rag-local-or-api-llm.py  rag.py
console/openai_console_rag/: OpenAI_Chatbot.py
langChain_ChainLit/langchain-gpt-chainlit/: .env  langchain_gpt.py  langchain_gpt_other_messages.py
langChain_ChainLit/langchain-llama3-ollama-chainlit/: langchain_llama3_memory_ollama.py  langchain_llama3_ollama.py
langChain_ChainLit/langchain-mixtral-ollama-chainlit/: .env  langchain_mixtral_memory_ollama.py  langchain_mixtral_ollama.py
multi-agents/gpt4-multi-agent/: LICENSE  README.md  blogpost-20240316.md  main.ipynb  multi-agents-libs.ipynb  pyproject.toml
presentations/: .~lock.ai_bots_classification.ods#  ai_bots_presentation.odp
