[tool.poetry]
name = "technology-experiments-multi-agent-create-blog-post"
version = "0.1.0"
description = ""
authors = ["José Gregorio Argomedo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.14.0"
langchain = "^0.1.12"
langchain-openai = "^0.0.8"
langchain-anthropic = "^0.1.4"
anthropic = "^0.20.0"
python-dotenv = "^1.0.1"
google-search-results = "^2.4.2"
langgraph = "^0.0.28"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
